hot fix for review and find pitch